# VerteilteSystemePraktikum2

./: .gitignore  CMakeLists.txt  makerpc  rdict.c  rdict.h  rdict.x  rdict_cif.c  rdict_clnt.c  rdict_int.h  rdict_sif.c  rdict_srp.c  rdict_svc.c  rdict_xdr.c
